fix navbar wrap on safari.

--- a/src/css/sitenav.css
+++ b/src/css/sitenav.css
@@ -1,10 +1,14 @@
 .navLink {
+  display: flex;
   padding: 0 10px;
   white-space: nowrap;
 }
 
 .navbar {
-  display: inline-block;
-  margin: 0 8px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 0 auto;
   max-width: 90vw;
+  justify-content: center;
 }
